[lutron] update for review comment
Signed-off-by: Bob Adair <bob.github@att.net>